Add text in about pg

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,6 +11,7 @@
 <body>
     <div class="main-content">
         {{>header}}
+        <p>This site was created to extract the extract forecast of a location. It uses mapbox.com and darksky.net </p>
     </div>
     {{>footer}}
 </body>
